Fix errors generated from gcc8

Double assignment occurred for these variables. Remove it.

BUG=921582

Change-Id: I47d65ad493ee9bb01a7307b500c0e028fed9233f
Reviewed-on: https://chromium-review.googlesource.com/c/1409605
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623274}